--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,6 @@
   <body>
     <%= render partial: "/shared/header" %>
     <%= yield %>
+    <%= render partial: "/shared/footer" %>
   </body>
 </html>
