--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -1,2 +1,28 @@
+
 <div class="main-contaner">
+  <div class="new-article">
+    新規記事
+  </div>
+  <div class="new-article-small">
+    新規記事小
+  </div>
+  <p>
+    read more
+  </p>
+  <div class="boxContainer">
+	  <div class="category box">
+      <p>カテゴリ一覧</p>
+      <div class="notice">
+        お知らせ
+      </div>
+      <div class="test">
+        てすと
+      </div>
+    </div>
+	 <div class="recomend box">
+     <p>おすすめの記事</p>
+      <p>hoge</p>
+      <p>fugafugafugafugafugafugafugafuga</p>
+    </div>
+  </div>
 </div>
