--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,11 @@
 <div class="footer">
   <div class="footer-category">
-    footer
+      サイトマップ　お問い合わせ　運営情報
+  </div>
+  <div class="copyright">
+    <center>
+    <%= image_tag 'logo.png', :height => '20' %>
+    ©わくてっく
+    </center>
   </div>
 </div>
