--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+ .main-header {
+ color: #000000;
+ background-color: #ebd8c0;
+ text-align: center;
+ height: 40px;
+ }
+
+ .footer {
+ color: #FFFFFF;
+ background-color: #5b310f;
+ text-align: center;
+ }
