--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,8 @@
-<div class="main-header">
-カテゴリー　カテゴリー　カテゴリー  
-</div>
+<center>
+  <div>
+    <%= image_tag 'logo.png', :height => '200' %>
+  </div>
+  <div class="main-header">
+    カテゴリー　カテゴリー　カテゴリー
+  </div>
+</center>
