--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,7 @@
-<center>
-  <div>
-    <%= image_tag 'logo.png', :height => '200' %>
-  </div>
-  <div class="main-header">
+<div class="main-header">
+  <%= image_tag 'logo.png', :height => '200' %>
+
+  <div class="navi">
     カテゴリー　カテゴリー　カテゴリー
   </div>
-</center>
+</div>
