--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,6 +2,8 @@
   <%= image_tag 'logo.png', :height => '200' %>
 
   <div class="navi">
-    カテゴリー　カテゴリー　カテゴリー
+    <% @categories.each do |category| %>
+      <%= link_to category["name"],category["link"] %>
+    <% end %>
   </div>
 </div>
